PUT working on front end

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title>Angular UI Test DnD</title>
-	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
-	<script   src="https://code.jquery.com/ui/1.12.0-rc.2/jquery-ui.js"   integrity="sha256-6HSLgn6Ao3PKc5ci8rwZfb//5QUu3ge2/Sw9KfLuvr8="   crossorigin="anonymous"></script>
+	<script   src="js/Lib/jquery-2.2.4.js"></script>
+	<script src="js/Lib/jquery-ui.js"></script>
+	<script src="js/Lib/bootstrap.min.js"></script>
 	<script src="js/Lib/angular.js"></script>
 	<script src="js/Lib/angular-drag-and-drop-lists.js"></script>
 	<script src="js/Lib/angular-route.js"></script>
 	<script src="js/Lib/angular-resource.js"></script>
 	<script src="js/Lib/angular-sanitize.js"></script>
 	<script src="js/Lib/angular-file-upload.js"></script>
-
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.1.0/bootstrap.min.js"></script>
+	
 	<script src="js/Lib/angular-modal-service.js"></script>
 	<script src="js/uiBootstrap/ui-bootstrap-tpls-2.0.0.min.js"></script>
 	<script src="js/app.js"></script>
@@ -39,6 +39,7 @@
   	
 	
 	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.js"></script>
+	
 	<script src="https://cdn.jsdelivr.net/lodash/4.13.1/lodash.js"></script>-->
 	<link rel="stylesheet" type="text/css" href="textAng/dist/textAngular.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
