Building page edit

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 	<script src="js/Controllers/crudPages.js"></script>
 	<script src="js/Controllers/listController.js"></script>
 	<script src="js/Directives/directives.js"></script>
+	<script src="js/Directives/imageUploadDirective.js"></script>
 	<script src="js/Directives/contentPop.js"></script>
 	<script src="js/Filters/textAngFilter.js"></script>
 	<script src="js/Services/services.js"></script>
