Reformatting function calls

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
 	<script src="js/Controllers/listController.js"></script>
 	<script src="js/Directives/directives.js"></script>
 	<script src="js/Directives/imageUploadDirective.js"></script>
-	
+	<script src="js/fileup/ng-file-upload.min.js"></script>
+	<script src="js/fileup/ng-file-upload-shim.js"></script>
 	<script src="js/Services/services.js"></script>
 	<script src="js/Lib/angular-dragdrop.js"></script>
 	<script src="js/rangy/rangy-core.js"></script>
