image upload from drag work

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 	<script src="js/Controllers/listController.js"></script>
 	<script src="js/Directives/directives.js"></script>
 	<script src="js/Directives/imageUploadDirective.js"></script>
+	<script src="js/Directives/imageDnd2.js"></script>
 	<script src="js/fileup/ng-file-upload.min.js"></script>
 	<script src="js/fileup/ng-file-upload-shim.js"></script>
 	<script src="js/Services/services.js"></script>
