--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 	<script src="js/Lib/angular-modal-service.js"></script>
 	<script src="js/uiBootstrap/ui-bootstrap-tpls-2.0.0.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/ajax/imageUp.js"></script>
 	<script src="js/Controllers/crudPages.js"></script>
 	<script src="js/Controllers/listController.js"></script>
 	<script src="js/Directives/directives.js"></script>
